========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-10-04

  - Minor bug fix for beancount.prices.price on null result.


2018-09-19

  - Removed TRUNCATE(), after realizing ROOT() can already do the same thing.


2018-09-18

  - Added TRUNCATE() function to SQL shell for Vikas Rawal.


2018-09-03

  - Added a parameter to the cmptest assertions to disable real booking and
    allow a weak local form of booking conversion that allows interpolation.
    (I'm using this in another project to assert some incomplete transactions.)


2018-08-30

  - Made assertions on entries off of the TestCase class, as free functions (so
    that they can be used in another project).


2018-08-26

  - Fixed tests for pipeline running pytest (somehow the curses functions fail,
    probably due to better environment isolation from pytest).

  - Implementation of beancount.ingest.regression_pytest, a pytest replacement
    for beancount.ingest.regression, which was for nose. This is simpler and
    better and more straightforward (no conditionals; all regression files must
    have all accompanying expect files and all must pass). See the module
    docstring for new instructions on how to use this.

    This should not break the older tests, as I haven't changed the older
    support. It (beancount.ingest.regression) will be removed eventually.

    (This completes porting Beancount to use pytest instead of nosetests.)


2018-08-25

  - Today we're switching to pytest as the official test runner. All the tests
    pass, and it even runs faster. It's about time!

  - Removed all references and workaround to nose.


2018-08-23

  - Oops... removing forgotten trace in bean-web.

  - Fixed #325: Implemented support for including encrypted files (for Milind Kamble
    and using some of this changes).


2018-08-17

  - Added 'issuer' column to the export script. I'm going to use this to produce