@@ -205,6 +205,14 @@ class TestEntryPrinter(cmptest.TestCase):
         """
         self.assertRoundTrip(entries, errors)
 
+    def test_metadata(self):
+        meta = data.new_metadata('beancount/core/testing.beancount', 12345)
+        meta['something'] = r'a"\c'
+        pr = printer.EntryPrinter()
+        oss = io.StringIO()
+        pr.write_metadata(meta, oss)
+        self.assertEqual('  something: "a\\"\\\\c"\n', oss.getvalue())
+
 
 def characterize_spaces(text):
     """Classify each line to a particular type.
